# sndfile-alsa-example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  sndfile-alsa.c
